[package]
name = "how_to_write_a_custom_derive_macro_step_by_step"
version = "0.1.0"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro = { path = "../hello_macro" }
hello_macro_derive = { path = "../hello_macro/hello_macro_derive" }